--- a/functions/views/dev/case-study/lazyouts.hbs
+++ b/functions/views/dev/case-study/lazyouts.hbs
@@ -77,11 +77,21 @@
 
 				<div class="card__col--75">
 					<h3 class="title">Overview</h3>
-					<h4 class="subtitle">Project Description</h4>
-					<p class="copy">An initiative to bring consistency to all of QuotedCar's products, and speed up future development through the development of an in-house front-end framework. While Bootstrap was useful for us in the past, a lot of development time was spent overriding the framework's opinionated visual style.</p>
-					<!-- <p class="copy"></p> -->
+					<!-- <h4 class="subtitle">User Story</h4> -->
+					<!-- <p class="copy">As a product manager, I’ve seen our codebase grow and inconsistency creep over the past couple years of our product’s development. While our team aims for consistency, we sometimes miss the mark. Part of this is due to our reliance on a popular component library that is the underlying skeleton of our interfaces. Inconsistencies that stem from overriding the component libraries visually opinionated defaults ultimately lead to common UI components like cards being built in different ways in different places. We’ve found that this introduces visual inconsistency at best, while at worse creating bugs, developer confusion, loss of time, among other things as a product manager I would like to limit.</p> -->
+					<h4 class="subtitle">Who</h4>
+					<p class="copy">Product Manager, Junior Level Developer, Senior Level Developer</p>
+					<h4 class="subtitle">What</h4>
+					<p class="copy">A front-end framework behind the layout and UI of QuotedCar’s products.</p>
+					<h4 class="subtitle">Why</h4>
+					<ul class="list">
+						<li>Consistency in usability and appearance, with the ability to iterate and maintain from a high level.</li>
+						<li>Having a framework creates more opportunity for the team’s junior level developer to contribute in building layouts and components.</li>
+						<li>The framework benefits the team’s senior level developer by freeing up time and mental bandwidth.</li>
+					</ul>
+					<!-- <p class="copy">Consistency in usability and appearance, with the ability to iterate and maintain from a high level. Having a framework creates more opportunity for the team’s junior level developer to contribute in building layouts and components. The framework benefits the team’s senior level developer by freeing up time and mental bandwidth.</p> -->
 
-					<div class="card--img-row">
+					<!-- <div class="card--img-row">
 
 						<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
 								   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
@@ -101,7 +111,7 @@
 							alt="Title 2"
 							data-description="Description 2">
 
-					</div>
+					</div> -->
 
 				</div>
 
@@ -118,11 +128,13 @@
 					<div class="tags">
 						<div class="tag">Project Manager</div>
 						<div class="tag">UX Design</div>
+						<div class="tag">Visual Design</div>
 						<div class="tag">Front-End Dev</div>
 					</div>
 					<h4 class="subtitle">Skills &amp; Tools</h4>
 					<div class="tags">
 						<div class="tag">Sketch</div>
+						<div class="tag">Principle</div>
 						<div class="tag">Figma</div>
 						<div class="tag">HTML</div>
 						<div class="tag">CSS</div>
@@ -142,7 +154,7 @@
 			<div class="stripe_copy-container">
 
 				<h3 class="title">The Problem</h3>
-				<p class="copy">While our developers have plenty of design reference, they spend a significant amount of time writing the same code over and over. "How many different class names do we have for a simple card?" I asked myself.</p>
+				<p class="copy">As a product manager, I’ve seen our codebase grow and inconsistency creep over the past couple years of our product’s development. While our team aims for consistency, we sometimes miss the mark. Part of this is due to our reliance on a popular component library that is the underlying skeleton of our interfaces. Inconsistencies that stem from overriding the component libraries visually opinionated defaults ultimately lead to common UI components like cards being built in different ways in different places. We’ve found that this introduces visual inconsistency at best, while at worse creating bugs, developer confusion, loss of time, among other things as a product manager I would like to limit.</p>
 
 			</div>
 
@@ -167,19 +179,23 @@
 
 				<div class="timeline">
 
-					<div id="timeline-track">
-
-
-					</div>
+					<div id="timeline-track"></div>
 
 					<div class="timeline-content">
 
 						<div class="interval">
-							<h4 class="subtitle">Assessing Needs, Functionally and Visually</h4>
-							<p class="copy">Aside from the mandate for consistency. Before a pixel was pushed we needed to brainstorm the components we use most, what we like or don't like about how we build those compnents now, and what components will be added to the framework, and when.</p>
+							<h4 class="subtitle">Assessing Needs</h4>
+							<p class="copy">We need an internal framework, similar to what we were using before, but simpler, smaller, and better suited to our needs. Let’s slow down for a moment, to speed up how we do things over the long haul.</p>
+							<p class="copy">When we boil it down, what we need falls into a few categories.</p>
+							<ol class="list timeline-card">
+								<li>Layouts</li>
+								<li>UI Components</li>
+								<li>JavaScript helper functions</li>
+								<li>Works in >= IE 10</li>
+							</ol>
 						</div>
 
-						<div class="timeline--img-row interval--img-row">
+						<!-- <div class="timeline--img-row interval--img-row">
 
 							<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
 									   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
@@ -199,29 +215,91 @@
 								alt="Title 2"
 								data-description="Description 2">
 
-						</div>
+						</div> -->
 
 						<div class="interval">
-							<h4 class="subtitle">Selecting the Stack</h4>
-							<p class="copy">XXXXX.</p>
+							<h4 class="subtitle">Wireframing</h4>
+							<!-- <p class="copy">XXXXX.</p> -->
+						</div>
+
+						<!-- <div class="subinterval">
+							<h4 class="subtitle">Example Subinterval Title</h4>
+							<p class="copy">Example Subinterval paragraph</p>
+						</div> -->
+
+						<div class="interval">
+							<h4 class="subtitle">Visual Design</h4>
+							<!-- <p class="copy">XXXXX.</p> -->
+						</div>
+
+						<!-- <div class="subinterval">
+							<h4 class="subtitle">Example Subinterval Title</h4>
+							<p class="copy">Example Subinterval paragraph</p>
+						</div> -->
+
+						<div class="interval">
+							<h4 class="subtitle">Prototyping</h4>
+							<!-- <p class="copy">XXXXX.</p> -->
+						</div>
+
+						<!-- <div class="subinterval">
+							<h4 class="subtitle">Example Subinterval Title</h4>
+							<p class="copy">Example Subinterval paragraph</p>
+						</div> -->
+
+						<div class="interval">
+							<h4 class="subtitle">Development</h4>
+							<!-- <p class="copy"></p> -->
 						</div>
 
 						<div class="subinterval">
-							<h4 class="subtitle">Example Subinterval Title</h4>
-							<p class="copy">Example Subinterval paragraph</p>
-						</div>
+							<h4 class="subtitle">CSS &amp; SASS</h4>
+							<p class="copy">In terms of layouts, SASS was a big help in building the framework. For instance, three SASS mixins allowed us to cover the gamut of layout scenarios we would encounter including:</p>
+							<ol class="list timeline-card">
+								<li>Up to a 12-column equally spaced grid at 100% width</li>
+								<li>Left-side sidebars up to 50% width</li>
+								<li>Right-side sidebars up to 50% width</li>
+							</ol>
+							<p class="copy">Here's an example of the mixin I built to generate the 12 column layout classes we needed in the framework:</p>
+							<div class="code">
+								<p class="block">
+									<span class="blue">// Mixin #1 Example: Equally Spaced Columns Layout</span><br>
+									<span class="white">@mixin</span> grid<span class="white">(</span>$columns<span class="white">,</span> $areas<span class="white">)</span> <span class="white">{</span><br>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="white">-ms-grid-columns:</span> <span class="white">(</span><span class="pink">1fr</span><span class="white">)[</span>$columns<span class="white">]</span>;<br>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="white">grid-template-columns:</span> repeat<span class="white">(</span>$columns, <span class="pink">1fr</span><span class="white">)</span>;<br>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="white">grid-template-areas:</span> $areas;<br>
+									<span class="white">}</span>
+									<br><br>
+									<span class="blue">// 1 Column Grid Layout Example Class</span><br>
+									.col_1 <span class="white">{</span><br>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="white">@include</span> grid<span class="white">(</span><span class="pink">1</span><span class="white">,</span> <span class="white">"</span><span class="pink">col</span><span class="white">")</span>;<br>
+									<span class="white">}</span>
+									<br><br>
+									<span class="blue">// 2 Column Grid Layout Example Class</span><br>
+									.col_2 <span class="white">{</span><br>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="white">@include</span> grid<span class="white">(</span><span class="pink">2</span><span class="white">,</span> <span class="white">"</span><span class="pink">col col</span><span class="white">")</span>;<br>
+									<span class="white">}</span>
+									<br><br>
+									<span class="blue">// 3 Column Grid Layout Example Class</span><br>
+									.col_3 <span class="white">{</span><br>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="white">@include</span> grid<span class="white">(</span><span class="pink">3</span><span class="white">,</span> <span class="white">"</span><span class="pink">col col col</span><span class="white">")</span>;<br>
+									<span class="white">}</span>
+									<br><br>
+									<span class="blue">// ... through 12 columns</span><br>
+								</p>
+							</div>
 
-						<div class="interval">
-							<h4 class="subtitle">Example Interval Title</h4>
-							<p class="copy">Example Interval Paragraph</p>
+							<p class="copy">Using SASS mixins benefited us the most because it limits the maintenance of every layout class built into the framework to only having to deal with three blocks of code.</p>
+							<p class="copy">Each layout class is fully nestable in the others, creating nearly unlimited possibilities. The framework is also fully responsive with breakpoints to cover mobile, tablet, desktop and above.</p>
 						</div>
 
 						<div class="subinterval">
-							<h4 class="subtitle">Example Subinterval Title</h4>
-							<p class="copy">Example Subinterval paragraph</p>
+							<h4 class="subtitle">JavaScript &amp; jQuery</h4>
+							<p class="copy">Behind the scenes of the framework’s layouts and components are a set of utility functions. These utility functions were built in JavaScript and jQuery to assist with dynamic actions the UI would need to contain including tabs, navigation, lazy loading images, and system feedback. </p>
+							<p class="copy">My personal favorite utility function takes a background color and dynamically applies a properly contrasting white or black color to the text that sits on the layer above it. Using this function is a great boost to the product’s usability as it always ensures text is readable, no matter what content is thrown at it.</p>
 						</div>
 
-						<div class="timeline--img-row interval--img-row">
+						<!-- <div class="timeline--img-row interval--img-row">
 
 							<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
 									   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
@@ -241,12 +319,12 @@
 								alt="Title 2"
 								data-description="Description 2">
 
-						</div>
+						</div> -->
 
-						<div class="subinterval">
+						<!-- <div class="subinterval">
 							<h4 class="subtitle">Example Subinterval Title</h4>
 							<p class="copy">Example Subinterval paragraph</p>
-						</div>
+						</div> -->
 
 					</div>
 
@@ -262,9 +340,9 @@
 			<div class="stripe_copy-container">
 
 				<h3 class="title">The Solution</h3>
-				<p class="copy">A modular CSS framework was built, named lazyouts, allowing for anyone on the team with basic front-end knowledge to construct consistent layouts that conform to QuotedCar's design guidelines.</p>
-				<p class="copy">The development of lazyouts allowed for the team's junior developer to make a larger contribution. Moreover, the investment paid off by freeing up some of the more repetitive work of the team's senior developer.</p>
-
+				<p class="copy">The solution to the problem was our very own framework and component library built using HTML, CSS and JavaScript, with some help from SASS and jQuery along the way. </p>
+				<p class="copy">The primary benefits have come over time in the form of less bugs and increased visual consistency for users, which builds trust, and for the developers it has made the codebase friendlier and less of a burden to maintain. </p>
+				<p class="copy">Having our own framework has also had the benefit of increasing collaboration on the team. The three members of our small team are all able to contribute in a greater and more meaningful way, with our junior developer stepping in and taking over some of the more mundane issues from our senior level developer. Having a more steady and consistent burndown rate for issues in our sprint was the icing on the proverbial cake.</p>
 			</div>
 
 			<div class="stripe_stat-container">
@@ -278,27 +356,27 @@
 
 			<div class="card">
 
-				<img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
+				<!-- <img data-srcset=".../../images/case-studies/overview/overview_email-gen@1x.png,
 						   ../../images/case-studies/overview/overview_email-gen@2x.png 2x,
 						   ../../images/case-studies/overview/overview_email-gen@3x.png 3x"
 					data-src="../../images/case-studies/overview/overview_email-gen@3x.png"
 					src="../../images/case-studies/overview/overview_email-gen@3x.png"
 					class="img--full-width color lazyload modal_trigger--open"
 					alt="Title 1"
-					data-description="Description 1">
+					data-description="Description 1"> -->
 
-				<p class="copy">Here is some copy to go along with this other stuff.</p>
+				<!-- <p class="copy">Here is some copy to go along with this other stuff.</p> -->
 
-				<img data-srcset="../../images/case-studies/overview/overview_qc-logo@1x.png,
+				<!-- <img data-srcset="../../images/case-studies/overview/overview_qc-logo@1x.png,
 						   ../../images/case-studies/overview/overview_qc-logo@2x.png 2x,
 						   ../../images/case-studies/overview/overview_qc-logo@3x.png 3x"
 					data-src="../../images/case-studies/overview/overview_qc-logo@3x.png"
 					src="../../images/case-studies/overview/overview_qc-logo@3x.png"
 					class="img--full-width color lazyload modal_trigger--open"
 					alt="Title 2"
-					data-description="Description 2">
+					data-description="Description 2"> -->
 
-				<p class="copy">And here are some more things to go along with this other stuff.</p>
+				<!-- <p class="copy">And here are some more things to go along with this other stuff.</p> -->
 
 			</div>
 
